// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VersionListSection /> Should match previous snapshot using data from api and language ID 17045 English: USA 1`] = `
<DocumentFragment>
  <div
    class="version-list-section"
  >
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="English Standard Version® - Hear the Word Audio Bible"
          type="button"
        >
          English Standard Version® - Hear the Word Audio Bible
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class="active-version"
          title="English Standard Version®"
        >
          English Standard Version®
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class=""
          title="King James Version"
        >
          King James Version
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="New American Bible, revised edition (NABRE)"
          type="button"
        >
          New American Bible, revised edition (NABRE)
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class=""
          title="Holy Bible, New International Version®"
        >
          Holy Bible, New International Version®
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="New King James Version"
          type="button"
        >
          New King James Version
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="New Living Translation® - her.BIBLE (women’s voices)"
          type="button"
        >
          New Living Translation® - her.BIBLE (women’s voices)
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="New Living Translation®, Holy Sanctuary version"
          type="button"
        >
          New Living Translation®, Holy Sanctuary version
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="World English Bible"
          type="button"
        >
          World English Bible
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="World English Bible - Winfred Henson"
          type="button"
        >
          World English Bible - Winfred Henson
        </button>
      </summary>
    </details>
  </div>
</DocumentFragment>
`;

exports[`<VersionListSection /> Should match previous snapshot with valid props 1`] = `
<DocumentFragment>
  <div
    class="version-list-section"
  >
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class=""
          title="English Standard Version"
        >
          English Standard Version
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class="active-version"
          title="New International Version"
        >
          New International Version
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class=""
          title="King James Version"
        >
          King James Version
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="New American Bible"
          type="button"
        >
          New American Bible
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="World English Bible"
          type="button"
        >
          World English Bible (Hosanna audio) (World English Bible)
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker top-level-title"
      >
        <button
          class=""
          title="World English Bible (Afred Henson)"
          type="button"
        >
          World English Bible (Afred Henson)
        </button>
      </summary>
    </details>
    <details
      class="accordion-item"
    >
      <summary
        class="accordion-title-style summary-no-marker"
      >
        <h4
          class=""
          title="New International Version (Anglicised)"
        >
          New International Version (Anglicised)
        </h4>
      </summary>
      <div
        class="accordion-body-style"
      >
        <button
          class="version-item-button"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </details>
  </div>
</DocumentFragment>
`;
